new map working

--- a/pages/layout.module.sass
+++ b/pages/layout.module.sass
@@ -19,12 +19,16 @@
 .app-shell
   background-color: var(--background-color)
 
-.column-map, #map
+#map
   height: 100%
   width: 100%
   aspect-ratio: 3/2
   cursor: pointer
   z-index: 100
+
+.map-area-container
+  width: 100% !important
+  height: 100% !important
 
 // davids
 .nav
