--- a/pages/main.module.sass
+++ b/pages/main.module.sass
@@ -126,8 +126,9 @@ a
   padding: 0px
   display: flex
   flex-direction: column
-  width: 60%
-  margin-left: 20%
+  width: 100%
+  padding: 0 20%
+  background-color:  var(--text-emphasized-color)
 
   a
     color: var(--text-emphasized-color) !important
