new columns api and faster map

--- a/pages/columns/main.module.scss
+++ b/pages/columns/main.module.scss
@@ -45,7 +45,7 @@ h2 {
 
 .column-row {
     display: grid;
-    grid-template-columns: 10% 70% 20%
+    grid-template-columns: 10% 90%
 }
 
 .active, .inprocess, .obsolete {
