concept hierarchy base created

--- a/pages/lex/main.module.sass
+++ b/pages/lex/main.module.sass
@@ -151,3 +151,7 @@ ul, h3
     .title
         font-weight: bold
         color: var(--text-emphasized-color)
+
+.concept-item
+    display: flex
+    justify-content: space-between
