--- a/pages/lex/strat-names/main.module.scss
+++ b/pages/lex/strat-names/main.module.scss
@@ -66,3 +66,14 @@ h1, h2, h3 {
     flex-direction: column;
     gap: 1em;
 }
+
+.page-loader-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+    h4 {
+        cursor: pointer;
+    }
+}
