Banish global styles from Sift

--- a/pages/main.module.sass
+++ b/pages/main.module.sass
@@ -1,16 +1,5 @@
-html, body
-  color: #E0E1E6
-  background-color: white
-  margin: 0
-
 .total
   width: 100%
-
-a
-  color: white
-
-  &:hover
-    text-decoration: none
 
 .nohighlight
   color: white
@@ -55,12 +44,12 @@ a
     .main-title
       font-size: 60px
       padding: 0
-        
+
     .version
       font-size: 40px
       padding: 0
       margin: 0
-  
+
   .big-text
     text-align: center
     font-family: Helvetica, sans-serif
@@ -128,7 +117,7 @@ a
   flex-direction: column
   width: 100%
   padding: 0 20%
-  background-color:  var(--text-emphasized-color)
+  background-color: var(--text-emphasized-color)
 
   a
     color: var(--text-emphasized-color) !important
@@ -227,7 +216,7 @@ a
 
 .donate-info
   flex: 0 0 50%
-  background: rgba(255,255,255,0.6)
+  background: rgba(255, 255, 255, 0.6)
   padding: 25px
   color: black
   width: 80%
@@ -373,7 +362,7 @@ a
   font-size: 20px
   margin: 40vh 10%
   padding: 20px
-  background-color: rgba(0,0,0,.4)
+  background-color: rgba(0, 0, 0, .4)
 
 .map-title
   position: absolute
