--- a/pages/maps/ingestion/@id/tables/edit-table.module.sass
+++ b/pages/maps/ingestion/@id/tables/edit-table.module.sass
@@ -3,6 +3,26 @@
   display: flex
   flex-direction: column
 
+  :global
+    // For the button text in cells
+    .bp5-button-text
+      overflow: hidden
+      text-overflow: ellipsis
+      min-height: 1rem
+
+
+    // Need this to get the popups in front of the sidebar
+    .bp5-portal
+      z-index: 101
+
+    .bp5-menu
+      padding: 0px
+
+    // For the table column highlighting
+    .final-column
+      box-shadow: inset 0 -1px 0 rgba(39, 201, 236, 0.55), inset -1px 0 0 rgba(39, 201, 236, 0.55) !important
+
+
 td
   text-wrap: nowrap
   background-color: #ffffff78
