--- a/src/styles/core.sass
+++ b/src/styles/core.sass
@@ -9,7 +9,7 @@
     --#{$name}: #{$color}
 
   --sans-serif-font: "Source Sans Pro", sans-serif
-  --serif-font: "Merriweather", serif
+  --serif-font: "Source Sans Pro", serif
 
 .secondary
   color: var(--secondary-color)
@@ -17,8 +17,8 @@
 .tertiary
   color: var(--tertiary-color)
 
-p, li, div, ul, ol
-  font-family: var(--serif-font)
+body
+  font-family: var(--sans-serif-font)
   font-size: 16px
 
 h1, h2, h3, h4, h5, h6
