--- a/src/layouts/main.module.sass
+++ b/src/layouts/main.module.sass
@@ -8,7 +8,7 @@
 
 .content-page
   width: 970px
-  margin: 0 auto
+  margin: 3em auto
   @media only screen and (max-width: 900px)
     padding: 0 1em
 
