--- a/pages/columns/main.module.sass
+++ b/pages/columns/main.module.sass
@@ -1,7 +1,25 @@
+.flex-row
+  display: flex
+  flex-direction: row
+  position: relative
+  gap: 2em
+
+.main, .sidebar
+  flex: 1
+
+.sidebar-content
+  padding-top: 2em
+  position: sticky
+  top: 0
+  display: flex
+  flex-direction: column
+  gap: 1em
+
 .column-map-container
   position: relative
-  width: 300px
-  height: 300px
+  min-height: 300px
+  width: 100%
+  aspect-ratio: 1/1
 
 .column-group-header
   display: flex
