Fix column page

--- a/pages/columns/@column/column-inspector/index.module.sass
+++ b/pages/columns/@column/column-inspector/index.module.sass
@@ -28,10 +28,13 @@
   flex-direction: column
   padding: 2em 0
 
+  & > *
+    border-radius: 4px
+
 .right-column-boxes
   display: flex
   flex-direction: column
-  gap: 2em
+  gap: 1em
 
 
 .column-view
