--- a/pages/columns/main.module.sass
+++ b/pages/columns/main.module.sass
@@ -7,6 +7,17 @@
 .main, .sidebar
   flex: 1
 
+:root
+  --main-extra-width: 200px
+
+
+@media (min-width: 1100px)
+  .flex-row
+    margin-right: calc(-1 * var(--main-extra-width))
+
+  .sidebar
+    max-width: calc(50% - var(--main-extra-width) / 2)
+
 .sidebar-content
   padding-top: 2em
   position: sticky
