--- a/pages/+Page.module.sass
+++ b/pages/+Page.module.sass
@@ -1,13 +1,6 @@
 .nohighlight
   color: white
 
-.main-navbar
-  width: 100%
-  margin: 1em 0 2em
-  display: flex
-  flex-direction: row
-  gap: 1em
-
 .start
   width: 100%
   display: flex
@@ -415,3 +408,8 @@
 
 .hide
   display: none
+
+.rock-info
+  display: flex
+  align-items: center
+  gap: .5em
