--- a/pages/publications/main.module.sass
+++ b/pages/publications/main.module.sass
@@ -1,5 +1,5 @@
 .publications
-  padding: 8vh 20% 5vh 20%
+  padding: 0 20% 5vh 20%
 
 .container
   background-color: var(--background-color)
@@ -17,10 +17,10 @@ a:hover
   border-bottom: 1px solid black
   position: absolute
 
-.pub-title 
+.pub-title
+  font-size: 72px
+  font-family: "Maven Pro", sans-serif
   text-align: left
-  position: relative
-  margin: 0
   padding: 0
 
 .pub-list
