--- a/pages/layout.module.sass
+++ b/pages/layout.module.sass
@@ -33,6 +33,7 @@
 // davids
 .nav
   border-bottom: 2px solid var(--text-emphasized-color)
+  background-color: var(--background-color)
 
 nav
   width: 100%
