--- a/pages/+Page.module.sass
+++ b/pages/+Page.module.sass
@@ -105,6 +105,8 @@
   flex-direction: column
   width: 100%
   padding: 0 20%
+  border-top: 2px solid var(--text-emphasized-color)
+  border-bottom: 2px solid var(--text-emphasized-color)
 
 .country_container
   height: 100vh
