chart styling and linking

--- a/pages/lex/main.module.sass
+++ b/pages/lex/main.module.sass
@@ -125,6 +125,8 @@ ul, h3
 .chart-container
     g
         cursor: pointer
+    .chart-title
+        fill: var(--text-emphasized-color)
 
 .range
     color: var(--text-emphasized-color) !important
