individual page styling

--- a/pages/lex/main.module.sass
+++ b/pages/lex/main.module.sass
@@ -1,6 +1,16 @@
 .int-names
     display: flex
     gap: 5px
+    align-items: flex-end
+
+    .strat-concept-title
+        display: flex
+        gap: 10px
+        align-items: flex-end
+
+        .strat-concept-name
+            font-size: 2em
+
     
     .int-name
         padding: 2px 6px
@@ -23,6 +33,10 @@
             margin: .2em 0
             border-radius: 0.2em  
             font-size: 1em
+
+.page-header
+    display: flex
+    justify-content: space-between
 
 ul, h3
     margin: 0
@@ -146,6 +160,7 @@ ul, h3
     .concept-name
         display: flex
         gap: 5px
+        align-items: flex-end
 
         .title
             font-size: 1.2em
