basic functionanlity of switch

--- a/pages/layout.module.sass
+++ b/pages/layout.module.sass
@@ -97,3 +97,23 @@
   display: flex
   flex-direction: column
   gap: 2em
+
+.search-bar 
+  display: flex
+  gap: 5px
+  align-items: center
+  justify-content: center
+
+  input 
+    width: 100%
+    padding: 0.5em
+    border-radius: 0.2em
+    border: none
+    background-color: var(--background-color)
+    color: var(--text-emphasized-color)
+    font-size: 1em
+    margin: 3px
+
+    &:focus 
+      outline: none
+      box-shadow: 0 0 0.2em var(--text-emphasized-color)
