--- a/pages/lex/strat-names/main.module.scss
+++ b/pages/lex/strat-names/main.module.scss
@@ -79,6 +79,11 @@
   flex-direction: column;
   gap: 1em;
 
+  .selected {
+    color: var(--text-emphasized-color) !important;
+    background-color: var(--secondary-background-color) !important;
+  }
+
   p {
     display: flex;
     align-items: flex-end;
