highleted styling fix

--- a/pages/lex/strat-names/main.module.scss
+++ b/pages/lex/strat-names/main.module.scss
@@ -81,7 +81,7 @@
 
   .selected {
     color: var(--text-emphasized-color) !important;
-    background-color: var(--secondary-background-color) !important;
+    background-color: var(--secondary-background) !important;
   }
 
   p {
