--- a/pages/lex/strat-names/main.module.scss
+++ b/pages/lex/strat-names/main.module.scss
@@ -84,6 +84,10 @@
     background-color: var(--secondary-background) !important;
   }
 
+  .unselected {
+    cursor: pointer;
+  }
+
   p {
     display: flex;
     align-items: flex-end;
