--- a/pages/+Page.module.sass
+++ b/pages/+Page.module.sass
@@ -9,6 +9,9 @@
   height: 50vh
   color: white
   position: relative
+  margin-bottom: calc(1em + 1px)
+  border-bottom: 2px solid var(--text-emphasized-color)
+
 
   li
     float: left
@@ -52,6 +55,8 @@
   height: 50vh
   width: 100%
   object-fit: cover
+  border-bottom: 2px solid var(--text-emphasized-color)
+
 
 .sea-image
   position: absolute
@@ -105,7 +110,6 @@
   flex-direction: column
   width: 100%
   padding: 0 20%
-  border-top: 2px solid var(--text-emphasized-color)
   border-bottom: 2px solid var(--text-emphasized-color)
 
 .country_container
