--- a/pages/layout.module.sass
+++ b/pages/layout.module.sass
@@ -39,7 +39,7 @@
   flex-direction: row
   gap: 1em
   align-items: center
-  justify-content: center
+  padding-left: 20%
 
   a
     color: var(--text-emphasized-color) !important
