--- a/pages/lex/strat-names/main.module.sass
+++ b/pages/lex/strat-names/main.module.sass
@@ -88,6 +88,20 @@
     padding: 0.2em 0.5em
     border-radius: 0.2em
 
+.concept-body
+  display: flex
+  justify-content: space-between
+
+.concept-strats
+  display: flex
+  gap: .5em
+  
+  .strat-tag
+      background-color:  var(--secondary-background)
+      color: white !important
+      padding: 0.2em 0.5em
+      border-radius: 0.2em
+
 .card-container
   display: flex
   gap: 1em
