new page with api

--- a/pages/lex/strat-names/main.module.sass
+++ b/pages/lex/strat-names/main.module.sass
@@ -76,32 +76,14 @@
     align-items: flex-end
     gap: 5px
 
-.strat-concept-card
-  background-color: var(--secondary-color) !important
-
-.strat-body
-  display: flex
-  justify-content: space-between
-
-  .concept-tag
-    background-color:  var(--secondary-color)
-    color: white !important
-    padding: 0.2em 0.5em
-    border-radius: 0.2em
-
 .concept-body
   display: flex
-  justify-content: space-between
-
-.concept-strats
-  display: flex
+  flex-direction: column
   gap: .5em
-  
-  .strat-tag
-      background-color:  var(--secondary-background)
-      color: white !important
-      padding: 0.2em 0.5em
-      border-radius: 0.2em
+
+  .concept-strats
+    list-style-type: circle
+    padding-left: 40px
 
 .card-container
   display: flex
