global style fix

--- a/pages/lex/strat-names/@id/main.module.sass
+++ b/pages/lex/strat-names/@id/main.module.sass
@@ -2,6 +2,7 @@
     padding: .2em .5em
     border-radius: .2em
     background-color: var(--tertiary-background)
+    font-size: 1.6em
 
 .strat-header
     display: flex
