strat tag component

--- a/src/components/general/layout.module.sass
+++ b/src/components/general/layout.module.sass
@@ -148,3 +148,7 @@
       outline: none
       box-shadow: 0 0 0.2em var(--text-emphasized-color)
     
+.strat-tag
+  padding: .2em .5em
+  border-radius: .2em
+  background-color: var(--tertiary-background)
