--- a/pages/+Page.module.sass
+++ b/pages/+Page.module.sass
@@ -1,61 +1,51 @@
 .nohighlight
   color: white
 
-.start
-  width: 100%
+.site-header.hero
+  margin-top: -3em
+  padding-top: 5em
+  padding-bottom: 5em
+  height: 500px
+
+.hero
+  height: 300px
+  border-radius: 1em
+  position: relative
   display: flex
   justify-content: center
   align-items: center
-  height: 50vh
   color: white
-  position: relative
-  margin-bottom: calc(1em + 1px)
-  border-bottom: 2px solid var(--text-emphasized-color)
+
+  --macrostrat-logo-size: 100px
+
+  text-shadow: var(--dark-background) 0px 2px 8px
 
 
-  li
-    float: left
-    list-style-type: none
-    width: 33%
+  .hero-backdrop
+    position: absolute
+    top: 0
+    left: 50%
+    bottom: 0
+    margin-left: -50vw
+    width: 100vw
+    height: 100%
+    z-index: -1
+    object-fit: cover
+    overflow: hidden
 
-  ul
-    display: inline-block
-    width: 100%
+  .hero-content
+    text-align: center
 
-.banner
-  z-index: 30
 
-  h1, h2
-    text-shadow: var(--dark-background) 1px 0 10px
+.cover-image
+  object-fit: cover
+  width: 100vw
+  overflow: hidden
 
-.header
-  text-shadow: black 1px 0 10px
-  text-align: center
-  display: flex
-  justify-content: center
-  gap: 10px
-
-  .main-title
-    font-size: 60px
-    padding: 0
-
-  .version
-    font-size: 40px
-    padding: 0
-    margin: 0
 
 .subtitle
   text-align: center
   font-weight: 500
-
-.cover-image
-  position: absolute
-  left: 0px
-  top: 0px
-  height: 50vh
-  width: 100%
-  object-fit: cover
-  border-bottom: 2px solid var(--text-emphasized-color)
 
 
 .sea-image
@@ -69,11 +59,6 @@
   display: inline-flex
   width: 100%
 
-.main-title
-  font-size: 72px
-  font-weight: 400
-  font-family: "Maven Pro", sans-serif
-  text-align: center
 
 .top-stat, .top-stat-label
   display: grid
@@ -104,13 +89,8 @@
     color: white
 
 .buttons
-  font-size: 20px
-  padding: 0px
   display: flex
   flex-direction: column
-  width: 100%
-  padding: 0 20%
-  border-bottom: 2px solid var(--text-emphasized-color)
 
 .country_container
   height: 100vh
@@ -135,12 +115,6 @@
   width: 100%
   margin: 0
   padding: 0
-
-.geologic-maps
-  height: 100vh
-  background-color: white
-  color: black
-  margin: 0
 
 .map-info
   padding: 0 10vh
