--- a/src/components/navigation/sticky-header.module.sass
+++ b/src/components/navigation/sticky-header.module.sass
@@ -1,8 +1,7 @@
 .sticky-header
   position: sticky
   top: 0
-  margin-top: -1em
-  padding-top: 1em
-  padding-bottom: 1em
   z-index: 100
-  background: linear-gradient(var(--background-color) 80%, rgba(255, 255, 255, 0))
+  margin: -1em -100rem 0
+  padding: 1em 100rem 1em
+  background: linear-gradient(var(--background-color) 90%, rgba(255, 255, 255, 0))
