--- a/pages/lex/+Page.module.sass
+++ b/pages/lex/+Page.module.sass
@@ -25,14 +25,19 @@
       margin: 0
       border-top: solid var(--panel-background-color) 2px
 
-    .item
-      text-align: left
-      padding: 2px 20px
-      cursor: pointer
-      width: 100%
+    .items
+        display: flex
+        flex-direction: column
 
-      &:hover
-        background-color: var(--accent-secondary-hover-color)
+        .item
+            text-align: left
+            padding: 2px 20px
+            cursor: pointer
+            width: 100%
+            text-decoration: none
+
+            &:hover
+                background-color: var(--accent-secondary-hover-color)
 
 .content-page
     display: flex
