--- a/src/components/general/layout.module.sass
+++ b/src/components/general/layout.module.sass
@@ -190,3 +190,10 @@ a.site-title
     font-family: "Maven Pro", sans-serif
     margin: 0
 
+.id-tag
+  text-align: right
+  padding: 0.2em 0.5em
+  border-radius: 0.2em
+  color: var(--text-emphasized-color)
+  background-color: var(--background-color)
+  align-self: flex-end
