--- a/pages/+Page.module.sass
+++ b/pages/+Page.module.sass
@@ -1,11 +1,13 @@
 .nohighlight
   color: white
 
-.site-header.hero
-  margin-top: -3em
-  padding-top: 5em
-  padding-bottom: 5em
-  height: 500px
+.site-header
+  z-index: 1000
+
+.main-title
+  --macrostrat-logo-size: 100px
+  --macrostrat-wordmark-size: 3em
+  justify-content: start
 
 .site-navbar
   :global(.navbar-title)
@@ -18,6 +20,12 @@
   &:global(.transition-leave)
     :global(.navbar-title)
       opacity: 0
+
+
+.subtitle
+  text-align: center
+  font-weight: 500
+
 //
 .hero
   height: 300px
@@ -27,8 +35,11 @@
   justify-content: center
   align-items: center
   color: white
+  padding-top: 5em
+  padding-bottom: 5em
+  height: 500px
 
-  --macrostrat-logo-size: 100px
+  font-size: 1.5em
 
   text-shadow: var(--dark-background) 0px 2px 8px
 
@@ -44,6 +55,9 @@
     z-index: -1
     object-fit: cover
     overflow: hidden
+    background-position: 50% 50%
+    background-size: cover
+    background-image: url("https://storage.macrostrat.org/assets/web/main-page/cover_large.jpg")
 
   .hero-content
     text-align: center
@@ -51,16 +65,10 @@
     flex-direction: column
     gap: 1em
 
-
 .cover-image
   object-fit: cover
   width: 100vw
   overflow: hidden
-
-
-.subtitle
-  text-align: center
-  font-weight: 500
 
 
 .sea-image
@@ -83,9 +91,13 @@
   a
     color: white !important
 
+
+.stats
+  font-size: 1.5em
+
 .top-stat
-  font-size: 35px
-  font-family: Helvetica, sans-serif
+  font-weight: 600
+
 
 .stats
   display: flex
@@ -134,13 +146,6 @@
 .map-info
   padding: 0 10vh
   margin: 0
-
-.title
-  margin: 0
-  font-size: 72px
-  font-family: "Maven Pro", sans-serif
-  padding: 20vh 0
-  text-align: center
 
 #about
   height: 100vh
