--- a/pages/map/map-interface/components/navbar/navbar.module.sass
+++ b/pages/map/map-interface/components/navbar/navbar.module.sass
@@ -45,3 +45,15 @@
         content: '–'
         position: absolute
         left: -1em
+
+.map-navbar :global(.bp5-navbar)
+  overflow: hidden
+
+.navbar-logo
+  //margin: -8px -15px -8px -15px
+  //margin-right: -10px
+  border: 1px solid var(--panel-rule-color)
+  --macrostrat-logo-size: 50px
+
+.navbar-link-container
+  margin-left: -10px
