Strat names and liths link to maps

--- a/src/components/lex/main.module.sass
+++ b/src/components/lex/main.module.sass
@@ -177,6 +177,6 @@ ul, h3
     display: flex
     gap: .5em
 
-.units-list, .fossils-list
+.units-list, .fossils-list, .maps-list
     display: flex
     flex-direction: column
