Load more for fossils, maps, and units

--- a/src/components/lex/main.module.sass
+++ b/src/components/lex/main.module.sass
@@ -180,3 +180,17 @@ ul, h3
 .units-list, .fossils-list, .maps-list
     display: flex
     flex-direction: column
+
+.load-more-btn
+    border: none
+    width: 100px
+    cursor: pointer
+    background-color: var(--accent-secondary-color)
+    margin-top: 10px
+
+    &:hover
+        background-color: var(--accent-secondary-hover-color)
+
+.load-more-wrapper 
+  display: flex
+  justify-content: center
