--- a/pages/lex/environments/main.module.scss
+++ b/pages/lex/environments/main.module.scss
@@ -34,6 +34,7 @@ h2 {
           padding: 2px 6px;
           margin: 0.2em 0;
           border-radius: 0.2em;
+          cursor: pointer;
         }
       }
     }
