--- a/pages/maps/main.module.scss
+++ b/pages/maps/main.module.scss
@@ -163,13 +163,25 @@ h3 {
 
 .header-container {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-between;
 
-  .header {
+  .search {
     display: flex;
-    flex-direction: column;
     gap: 1em;
-    width: 70%;
+    align-items: center;
+    justify-content: flex-end;
+    width: 100%;
+    max-width: 600px;
+
+    .search-bar {
+      flex: 1;
+    }
+  }
+
+  .header, .header2 {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
   }
 }
