--- a/pages/integrations/xdd/feedback/main.module.sass
+++ b/pages/integrations/xdd/feedback/main.module.sass
@@ -1,17 +1,9 @@
-.main
-  padding: 2em 8em
+.numbers
   display: flex
-  flex-direction: column
-  position: fixed
-  width: 100vw
-  height: 100vh
-  top: 0
-  left: 0
+  flex-wrap: wrap
+  gap: 1em
+  width: 50%
 
-.data-sheet-container
-  display: flex
-  flex-direction: column
-  flex: 1
-  position: relative
-  min-height: 0
-
+  .number-field
+    width: calc(50% - 1em)
+    margin: 0
