--- a/pages/integrations/xdd/feedback/main.module.sass
+++ b/pages/integrations/xdd/feedback/main.module.sass
@@ -7,3 +7,17 @@
   .number-field
     width: calc(50% - 1em)
     margin: 0
+
+.link-content
+  display: flex
+  justify-content: space-between
+  gap: 1em
+
+  .text
+    width: 80%
+    display: -webkit-box
+    -webkit-box-orient: vertical
+    overflow: hidden
+    text-overflow: ellipsis
+    -webkit-line-clamp: 3
+    line-clamp: 3
