--- a/pages/lex/strat-names/main.module.sass
+++ b/pages/lex/strat-names/main.module.sass
@@ -67,14 +67,7 @@
   display: flex
   flex-direction: column
   gap: 1em
-
-  .unselected
-    cursor: pointer
-
-  p
-    display: flex
-    align-items: flex-end
-    gap: 5px
+  margin-bottom: 1em
 
 .concept-body
   display: flex
