--- a/pages/lex/strat-names/@id/main.module.sass
+++ b/pages/lex/strat-names/@id/main.module.sass
@@ -3,6 +3,7 @@
     border-radius: .2em
     background-color: var(--tertiary-background)
     font-size: 1.6em
+    align-self: flex-start
 
 .strat-header
     display: flex
