--- a/src/components/general/layout.module.sass
+++ b/src/components/general/layout.module.sass
@@ -149,6 +149,7 @@
   padding: .2em .5em
   border-radius: .2em
   background-color: var(--tertiary-background)
+  align-self: center
 
 .navbar
   display: flex
