--- a/pages/integrations/xdd/feedback/@sourceTextID/+Page.client.module.sass
+++ b/pages/integrations/xdd/feedback/@sourceTextID/+Page.client.module.sass
@@ -11,3 +11,8 @@
   flex-direction: column
   flex: 1
   min-height: 100px
+
+.next-btn
+  background-color: green !important
+  margin-left: 2em
+  align-self: center
