View extraction button

--- a/pages/integrations/xdd/feedback/@sourceTextID/+Page.client.module.sass
+++ b/pages/integrations/xdd/feedback/@sourceTextID/+Page.client.module.sass
@@ -12,7 +12,12 @@
   flex: 1
   min-height: 100px
 
-.next-btn
+.btn
+  align-self: center
+
+.next
   background-color: green !important
   margin-left: 2em
-  align-self: center
+
+.paper
+  background-color: var(--secondary-background) !important
