--- a/src/components/lex/main.module.sass
+++ b/src/components/lex/main.module.sass
@@ -194,3 +194,8 @@ ul, h3
 .load-more-wrapper 
   display: flex
   justify-content: center
+
+.match-name
+    padding: .2em .5em
+    border-radius: .2em
+    color: white
