--- a/src/styles/core.sass
+++ b/src/styles/core.sass
@@ -61,3 +61,6 @@ span.spacer
 .fade-to-top
   background: linear-gradient(var(--background-color), rgba(255, 255, 255, 0))
 
+.bp5-dark
+  .bp5-card, .bp5-navbar
+    background-color: var(--panel-background-color)
