--- a/pages/lex/measurements/main.module.sass
+++ b/pages/lex/measurements/main.module.sass
@@ -1,3 +1,12 @@
 .panel
     background-color: var(--background-color)
     padding: 1em 1em .5em 1em
+
+    h3 
+        margin: 0
+
+    .selected-measurement
+        .ref
+            display: flex
+            justify-content: center
+            align-items: center
