Base map finished

--- a/pages/lex/measurements/main.module.sass
+++ b/pages/lex/measurements/main.module.sass
@@ -10,3 +10,11 @@
             display: flex
             justify-content: center
             align-items: center
+
+        .close-btn
+            cursor: pointer
+
+    .filter-select 
+        display: flex
+        flex-direction: column
+        gap: 1em
