--- a/src/components/general/layout.module.sass
+++ b/src/components/general/layout.module.sass
@@ -199,3 +199,7 @@ a.macrostrat-logo-link
   color: var(--text-emphasized-color)
   background-color: var(--background-color)
   align-self: flex-end
+
+.small
+  width: 24px
+  height: 24px
