--- a/pages/lex/timescales/main.module.scss
+++ b/pages/lex/timescales/main.module.scss
@@ -78,3 +78,58 @@ li {
 .timescale {
   cursor: pointer;
 }
+
+ul,
+h1,
+h2,
+p,
+h3 {
+  margin: 0;
+  padding: 0;
+}
+
+.timescale-content {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+
+.timescale-container {
+  color: var(--text-emphasized-color) !important;
+
+  line {
+    stroke: var(--text-emphasized-color) !important;
+  }
+}
+
+tspan {
+  fill: var(--text-color); 
+  font-size: 14px;
+}
+
+.visx-line {
+  stroke: var(--text-color);
+}
+
+.int-list {
+  display: flex;
+  flex-direction: column;
+  gap: 1.3em;
+
+  h2 {
+    margin: 0.5em 0;
+  }
+
+  .int-items {
+    display: flex;
+    gap: 5px;
+    flex-wrap: wrap;
+    align-items: center;
+
+    .int-name {
+      padding: 2px 6px;
+      margin: 0.2em 0;
+      border-radius: 0.2em;
+    }
+  }
+}
