--- a/pages/map/map-interface/map-page/main.module.styl
+++ b/pages/map/map-interface/map-page/main.module.styl
@@ -156,3 +156,13 @@ This stylesheet the overall application page layout.
 
     &.layers, &.settings
       --map-context-stack-width: 18em
+
+.fossil-container
+  background-color: var(--background-color)
+  display: flex
+  flex-direction: column
+
+  .close-icon
+    align-self: flex-end
+    cursor: pointer
+    padding: 0.5em
