Handle data right

--- a/src/components/lex/main.module.sass
+++ b/src/components/lex/main.module.sass
@@ -199,3 +199,14 @@ ul, h3
     padding: .2em .5em
     border-radius: .2em
     color: white
+
+.concept-head-container
+    display: flex
+    gap: .5em
+    align-items: center
+
+    .head
+        margin: 0
+
+h4 
+    margin: 0
