Reroute selected unit

--- a/pages/columns/main.module.sass
+++ b/pages/columns/main.module.sass
@@ -149,7 +149,7 @@
 .lith-tag
   background-color: var(--tertiary-color)
   border-radius: .2em
-  padding: 0 .5em
+  padding-right: .5em
   margin: .5em 0
   cursor: pointer
 
