Better tree styling

--- a/packages/lithology-hierarchy/src/main.module.sass
+++ b/packages/lithology-hierarchy/src/main.module.sass
@@ -38,3 +38,8 @@
     display: inline-block
     margin-right: 0.5em
     line-height: 2em
+
+.nodes
+  display: flex 
+  gap: .5em
+  flex-wrap: wrap
