Better main page styling

--- a/pages/integrations/xdd/feedback/@sourceTextID/+Page.client.module.sass
+++ b/pages/integrations/xdd/feedback/@sourceTextID/+Page.client.module.sass
@@ -23,19 +23,21 @@
   background-color: var(--secondary-background) !important
 
 .feedback-flexbox
-    width: 100%
-    margin-bottom: 2em
+  width: 100%
 
-    .inputs 
-        flex: 1
-        margin-right: 2em
+  .inputs 
+    flex: 1
+    margin-right: 2em
 
-    .submit-feedback
-        flex-shrink: 0
+  .submit-feedback
+    flex-shrink: 0
 
 .input
-    width: 100%
+  width: 100%
 
 .popover
-    padding: .2em .5em
-    margin: 0
+  padding: .2em .5em
+  margin: 0
+
+.buttons
+  flex: 0 0 auto
