Group units by name

--- a/pages/lex/units/main.module.sass
+++ b/pages/lex/units/main.module.sass
@@ -9,3 +9,15 @@
 .header
   display: flex
   justify-content: space-between
+
+.units
+  margin: 1em 0
+
+.unit-title
+  display: flex
+  justify-content: space-between
+  align-items: center
+
+.count
+  margin: 0
+  font-size: 15px
