--- a/pages/lex/+Page.module.sass
+++ b/pages/lex/+Page.module.sass
@@ -43,3 +43,26 @@
     display: flex
     flex-direction: column
     gap: 1em
+
+.header, .update-title
+  display: flex
+  justify-content: space-between
+  align-items: flex-start
+
+.title
+  margin: 0
+
+.update-title
+  display: flex
+  justify-content: space-between
+  position: relative
+
+.updates
+  padding: 0 1em
+
+.close-btn
+  position: absolute
+  z-index: 100
+  top: 1em
+  right: 0
+  cursor: pointer
