Allow multiple updates

--- a/pages/lex/+Page.module.sass
+++ b/pages/lex/+Page.module.sass
@@ -57,8 +57,17 @@
   justify-content: space-between
   position: relative
 
-.updates
+.update-container
   padding: 0 1em
+  max-height: 80vh
+  overflow-y: auto
+
+  .update-list
+    padding-top: .5em
+
+  .update
+    height: 250px
+
 
 .close-btn
   position: absolute
