--- a/pages/columns/@column/column-inspector/index.module.sass
+++ b/pages/columns/@column/column-inspector/index.module.sass
@@ -109,3 +109,10 @@ rect.selection-overlay
 .column-map, .unit-details-panel
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.3)
   border-radius: 6px
+
+
+.column-title-row
+  display: flex
+  flex-direction: row
+  align-items: baseline
+  justify-content: space-between
